tests/invalid/for_dict_requires_two_bindings.wio
fn Entry() -> i32 {
    let weights: Tree<i32, i32> = {< 1: 2 >};

    for entry in weights {
        return 0;
    }

    return 0;
}
